Fix alignment issue in comment page

--- a/Pages/Comments-Reviews/comments.css
+++ b/Pages/Comments-Reviews/comments.css
@@ -87,11 +87,11 @@
   color: #676767;
   font-size: 14px;
   line-height: 1.5;
-  margin-left: 63px;
+  margin-left: 40px;
 }
 .reply-panel-body {
   color: #676767;
   font-size: 14px;
   line-height: 1.5;
-  margin-left: 60px;
+  margin-left: 55px;
 }
